--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITF Web 01</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -41,7 +41,9 @@
         </div>
         <div class="content-text">
             <h1 class="content-heading">Hi, I'm Thanapat Thipthiangthae</h1>
-            <button class="content-button">Naruto!</button>
+            <button class="naruto-button">
+                <a class="naruto-link" href="lab14.html" target="_blank">Naruto!</a>
+            </button>
         </div>
     </div>
 
